--- a/TG.tex
+++ b/TG.tex
@@ -73,8 +73,8 @@
 			
 		\chapter{ARQUITECTURA EMPRESARIAL}
 			\input{development/deal}
-			%\input{development/application}
-			%\input{development/technology}
+			\input{development/application}
+			\input{development/technology}
 
 	\part{CIERRE DE LA INVESTIGACIÓN}
 
