--- a/development/database.tex
+++ b/development/database.tex
@@ -7,4 +7,7 @@
 	\includegraphics[width=1\linewidth]{development/modelo.png}
 	\caption{Modelo relacional}
 \end{figure}
+\begin{center}
+	\textbf{Fuente:} Propia.
+\end{center}
 }
