--- a/development/deal.tex
+++ b/development/deal.tex
@@ -1,5 +1,5 @@
 \section{Arquitectura capa de negocio}
-{Esta capa, es la capa de arquitectura del proyecto orientada al negocio, aquí se plasma el enfoque organizacional, las reglas que regirán el negocio y las entidades que representan el sistema, permitiendo obtener de forma optima los roles y actores que aquí se desempeñan.}
+{Esta capa, es la capa de arquitectura del proyecto orientada al negocio, aquí se plasma el enfoque organizacional, las reglas que regirán el negocio y las entidades que representan el sistema, permitiendo obtener de forma optima los roles y actores que aquí se desempeñan \cite{archimate}.}
 
 	\subsection{Punto de vista de organización}
 	{ El punto de vista organizacional esta enfocado a la estructura interna de la empresa, departamento o entidad organizacional, este refleja de forma jerárquica el nivel de los actores y roles que aquí interactúan \cite{archimate}.\\
@@ -10,6 +10,9 @@
 			\includegraphics[width=0.8\linewidth]{development/organizacion.png}
 			\caption{Metamodelo de Organización}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Colosoft E.U: Documento CasoColoSoft.
+		\end{center}
 	
 		\textbf{Caso:} La organización se encuentra ubicada en la ciudad de Bogotá donde sus principales actores son:
 		
@@ -23,10 +26,14 @@
 			\includegraphics[width=0.6\linewidth]{development/negocio.pdf}
 			\caption{Organización}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Propia.
+		\end{center}
 	}
 	
 	\subsection{Punto de vista de cooperación de actor}
-	{Se  basa en mostrar el número total de actores los cuales influyen en el negocio y las cooperaciones de fuentes externas, mostrando la forma en que se relacionan entre sí.\\
+	{Se  basa en mostrar el número total de actores los cuales influyen en el negocio y las cooperaciones de fuentes externas, mostrando la forma en que se relacionan entre sí \cite{archimate}.\\
+	\newpage
 		
 		\textbf{Modelo}\\
 		\begin{figure}[H]
@@ -34,6 +41,10 @@
 			\includegraphics[width=0.8\linewidth]{development/cooperacionactor.png}
 			\caption{Metamodelo de cooperación de actor}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Colosoft E.U: Documento CasoColoSoft.
+		\end{center}
+		\hfill \break
 		
 		\textbf{Caso:} Los principales actores y su relación con el negocio son:
 		
@@ -51,17 +62,23 @@
 			\includegraphics[width=0.8\linewidth]{development/cooperacionactor.pdf}
 			\caption{Cooperación de actor}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Propia.
+		\end{center}
 	}
 	
 	\subsection{Punto de vista de función de negocio}
-	{ En el punto de vista de función de negocio se muestra al detalle el funcionamiento de la organización, aquí se brinda un aspecto generalizado de las actividades primarias que se ejecutan y permite representar la estabilidad de la aplicación.\\
+	{ En el punto de vista de función de negocio se muestra al detalle el funcionamiento de la organización, aquí se brinda un aspecto generalizado de las actividades primarias que se ejecutan y permite representar la estabilidad de la aplicación \cite{archimate}.\\
 		
 		\textbf{Modelo}\\
 		\begin{figure}[H]
 			\centering
-			\includegraphics[width=0.8\linewidth]{development/funcion.png}
+			\includegraphics[width=0.6\linewidth]{development/funcion.png}
 			\caption{Metamodelo de función de negocio}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Colosoft E.U: Documento CasoColoSoft.
+		\end{center}
 		
 		\textbf{Caso:} En el negocio debe existir una persona dispuesta a ofertar sus productos al "fiado", el cual se gestionara por la app, luego un según actor quien se encuentre interesado pedirá fiado este, que será despachado hacia él.
 		
@@ -70,10 +87,14 @@
 			\includegraphics[width=0.8\linewidth]{development/funcion.pdf}
 			\caption{Función de negocio}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Propia.
+		\end{center}
 	}
 	
 	\subsection{Punto de vista de proceso de negocio}
-	{ El punto de vista del proceso de negocio, muestra una composición de alto nivel de los procesos encadenados en relación a los servicios que se ofrecen y la contribución de este con los productos de la empresa, permite una asignación de funciones a cada actor loas cuales definen su rol.\\
+	{ El punto de vista del proceso de negocio, muestra una composición de alto nivel de los procesos encadenados en relación a los servicios que se ofrecen y la contribución de este con los productos de la empresa, permite una asignación de funciones a cada actor loas cuales definen su rol \cite{archimate}.\\
+	\newpage
 		
 		\textbf{Modelo}\\
 		\begin{figure}[H]
@@ -81,6 +102,10 @@
 			\includegraphics[width=0.8\linewidth]{development/proceso.png}
 			\caption{Metamodelo de proceso de negocio}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Colosoft E.U: Documento CasoColoSoft.
+		\end{center}
+		\hfill \break
 		
 		\textbf{Caso:} Los procesos o actividades principales del proceso de negocio son:
 		
@@ -99,10 +124,13 @@
 			\includegraphics[width=0.8\linewidth]{development/proceso.pdf}
 			\caption{Proceso de negocio}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Propia.
+		\end{center}
 	}
 	
 	\subsection{Cooperación de proceso de negocio}
-	{ La cooperación de proceso de negocio muestra la relación entre los procesos del negocio con su entorno y sus respectivas dependencias.\\
+	{ La cooperación de proceso de negocio muestra la relación entre los procesos del negocio con su entorno y sus respectivas dependencias \cite{archimate}.\\
 		
 		\textbf{Modelo}\\
 		\begin{figure}[H]
@@ -110,6 +138,10 @@
 			\includegraphics[width=0.8\linewidth]{development/cooperacionproceso.png}
 			\caption{Metamodelo de cooperación de proceso de negocio}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Colosoft E.U: Documento CasoColoSoft.
+		\end{center}
+		\hfill \break
 		
 		\textbf{Caso:} Se especifica cuáles son los actores que influyen en los procesos, en este caso es la gestión de microcréditos (fiar).
 		
@@ -119,10 +151,15 @@
 			\includegraphics[width=0.6\linewidth]{development/cooperacionproceso.pdf}
 			\caption{Cooperación de proceso de negocio}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Propia.
+		\end{center}
+		\hfill
 	}
 	
 	\subsection{Punto de vista de producto}
-	{ El producto muestra el valor que este mismo le ofrece a los clientes o a todas las partes que se encuentren involucradas en el proceso, se visualiza la composición de estos en términos de servicios y pueden utilizados para generar interfaces que ayudaran con su oferta.\\
+	{ El producto muestra el valor que este mismo le ofrece a los clientes o a todas las partes que se encuentren involucradas en el proceso, se visualiza la composición de estos en términos de servicios y pueden utilizados para generar interfaces que ayudaran con su oferta \cite{archimate}.\\
+	\newpage
 		
 		\textbf{Modelo}\\
 		\begin{figure}[H]
@@ -130,6 +167,10 @@
 			\includegraphics[width=0.8\linewidth]{development/producto.png}
 			\caption{Metamodelo de producto}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Colosoft E.U: Documento CasoColoSoft.
+		\end{center}
+		\hfill \break
 		
 		\textbf{Caso:} En este caso el producto es la aplicación de gestión de préstamos, la cual brinda una plataforma confiable que genera cálculos totales de las deudas o préstamos previamente registrados.
 	
@@ -139,4 +180,7 @@
 			\includegraphics[width=0.8\linewidth]{development/producto.pdf}
 			\caption{Producto}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Propia.
+		\end{center}
 	}
