--- a/development/scrum.tex
+++ b/development/scrum.tex
@@ -1,8 +1,6 @@
 \section{Metodología ágil SCRUM}
 
-{Tal y como lo explica la guía de Scrum, es un marco de trabajo, un framework por el cual las personas pueden abordar problemas complejos adaptativos, a la vez que entregan productos del máximo valor posible de forma productiva y creativa.\\
-	
-Scrum se basa en la teoría de control de procesos empírica o empirismo, que asegura que el conocimiento procede de la experiencia y de tomar decisiones basándose en lo que se conoce.\\
+{Tal y como lo explica la guía de Scrum, es un marco de trabajo, un framework por el cual las personas pueden abordar problemas complejos adaptativos, a la vez que entregan productos del máximo valor posible de forma productiva y creativa, scrum se basa en la teoría de control de procesos empírica o empirismo, que asegura que el conocimiento procede de la experiencia y de tomar decisiones basándose en lo que se conoce.\\
 
 El plan del sprint es creado por todos los miembros del equipo Scrum de forma colaborativa. En esta ceremonia se toman todas las historias de usuario priorizadas y se decide sobre cuáles hacer el Sprint tomando como base el objetivo del sprint y la capacidad del equipo. Se define qué puede entregarse en el Incremento resultante del Sprint que comienza y cómo se conseguirá hacer el trabajo necesario para entregar el Incremento. Si bien Scrum no establece un método para estimar es recomendable utilizar alguno como, por ejemplo, la estimación en puntos de historia para cada uno de los elementos del sprint backlog.
 
@@ -12,6 +10,10 @@ El plan del sprint es creado por todos los miembros del equipo Scrum de forma co
 		\includegraphics[width=1\linewidth]{development/roles.png}
 		\caption{Roles y actores}
 	\end{figure}}
+	\begin{center}
+		\textbf{Fuente:} Propia.
+	\end{center}
+	\hfill
 
 	\subsection{Pila del Sprint}
 	{En esta sección se describe de forma detallada los requisitos o tareas que va a desarrollar el equipo de trabajo en cada iteración.
@@ -48,6 +50,9 @@ El plan del sprint es creado por todos los miembros del equipo Scrum de forma co
 			\includegraphics[width=1\linewidth]{development/sprint1.png}
 			\caption{Sprint 1}
 	\end{figure}
+	\begin{center}
+		\textbf{Fuente:} Propia.
+	\end{center}
 
 	\begin{itemize}
 		
@@ -60,6 +65,10 @@ El plan del sprint es creado por todos los miembros del equipo Scrum de forma co
 				\includegraphics[width=1\linewidth]{development/listarmenu.png}
 				\caption{Lista de menus - Tru\$tMe}
 			\end{figure}
+			\begin{center}
+				\textbf{Fuente:} Propia.
+			\end{center}
+			\hfill \break
 		
 		\item Crear menús
 		\begin{figure}[H]
@@ -67,6 +76,9 @@ El plan del sprint es creado por todos los miembros del equipo Scrum de forma co
 			\includegraphics[width=1\linewidth]{development/crearmenu.png}
 			\caption{Creación de menus - Tru\$tMe}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Propia.
+		\end{center}
 	
 		\item Actualizar menú
 		\begin{figure}[H]
@@ -74,6 +86,9 @@ El plan del sprint es creado por todos los miembros del equipo Scrum de forma co
 			\includegraphics[width=1\linewidth]{development/actualizarmenu.png}
 			\caption{Actualización de menus - Tru\$tMe}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Propia.
+		\end{center}
 		
 		\item Listar perfiles
 		\begin{figure}[H]
@@ -81,6 +96,10 @@ El plan del sprint es creado por todos los miembros del equipo Scrum de forma co
 			\includegraphics[width=1\linewidth]{development/listarperfiles.png}
 			\caption{Listar perfiles - Tru\$tMe}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Propia.
+		\end{center}
+		\hfill
 		
 		\item Crear perfiles
 		\begin{figure}[H]
@@ -88,6 +107,12 @@ El plan del sprint es creado por todos los miembros del equipo Scrum de forma co
 			\includegraphics[width=1\linewidth]{development/crearperfiles.png}
 			\caption{Creación de perfiles - Tru\$tMe}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Propia.
+		\end{center}
+		\hfill \break
+		\hfill \break
+		\hfill \break
 		
 		\item Actualizar perfiles
 		\begin{figure}[H]
@@ -95,6 +120,9 @@ El plan del sprint es creado por todos los miembros del equipo Scrum de forma co
 			\includegraphics[width=1\linewidth]{development/actualizarperfiles.png}
 			\caption{Actualización de perfiles - Tru\$tMe}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Propia.
+		\end{center}
 	
 		\item Otorgar permisos a un perfil
 		\begin{figure}[H]
@@ -102,6 +130,9 @@ El plan del sprint es creado por todos los miembros del equipo Scrum de forma co
 			\includegraphics[width=1\linewidth]{development/otorgarpermisos.png}
 			\caption{Otorgació de permisos - Tru\$tMe}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Propia.
+		\end{center}
 		
 		 
 	\end{itemize}
@@ -118,6 +149,9 @@ El plan del sprint es creado por todos los miembros del equipo Scrum de forma co
 				\includegraphics[width=1\linewidth]{development/sprint2.png}
 				\caption{Sprint 2}
 			\end{figure}
+			\begin{center}
+				\textbf{Fuente:} Propia.
+			\end{center}
 			
 			\begin{itemize}
 				
@@ -129,8 +163,11 @@ El plan del sprint es creado por todos los miembros del equipo Scrum de forma co
 					\centering
 					\includegraphics[width=1\linewidth]{development/guardarprestamos.png}
 					\caption{Guardar préstamos - Tru\$tMe}
-				\end{figure}		
-				
+				\end{figure}
+				\begin{center}
+					\textbf{Fuente:} Propia.
+				\end{center}		
+					
 			\end{itemize}
 			
 			
@@ -145,7 +182,10 @@ El plan del sprint es creado por todos los miembros del equipo Scrum de forma co
 				\includegraphics[width=1\linewidth]{development/sprint3.png}
 				\caption{Sprint 3}
 			\end{figure}
-			
+			\begin{center}
+				\textbf{Fuente:} Propia.
+			\end{center}
+				
 			\begin{itemize}
 				
 				\item \textbf{Incremento:} Luego de asignar las tareas relacionadas con el módulo de obtener préstamo se obtiene el tercer incremento, el cual consiste en el formulario para que el prestatario pueda adquirir un préstamo.
@@ -157,13 +197,19 @@ El plan del sprint es creado por todos los miembros del equipo Scrum de forma co
 					\includegraphics[width=1\linewidth]{development/escanearqr.png}
 					\caption{Escanear QR - Tru\$tMe}
 				\end{figure}
-				
+				\begin{center}
+					\textbf{Fuente:} Propia.
+				\end{center}
+					
 				\item Resumen de préstamos
 				\begin{figure}[H]
 					\centering
 					\includegraphics[width=1\linewidth]{development/resumenprestamos.png}
 					\caption{Resumen de préstamos - Tru\$tMe}
 				\end{figure}
+				\begin{center}
+					\textbf{Fuente:} Propia.
+				\end{center}
 	
 				
 			\end{itemize}
