--- a/annexes/annexA.tex
+++ b/annexes/annexA.tex
@@ -62,30 +62,45 @@
 			\includegraphics[width=0.8\linewidth]{annexes/e1-p1.png}
 			\caption{Diagrama de torta E-1 P-1}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Propia.
+		\end{center}
 	
 		\begin{figure}[H]
 			\centering
 			\includegraphics[width=0.8\linewidth]{annexes/e1-p2.png}
 			\caption{Diagrama de torta E-1 P-2}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Propia.
+		\end{center}
 	
 		\begin{figure}[H]
 			\centering
 			\includegraphics[width=0.8\linewidth]{annexes/e1-p3.png}
 			\caption{Diagrama de torta E-1 P-3}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Propia.
+		\end{center}
 	
 		\begin{figure}[H]
 			\centering
 			\includegraphics[width=0.8\linewidth]{annexes/e1-p4.png}
 			\caption{Diagrama de torta E-1 P-4}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Propia.
+		\end{center}
 	
 		\begin{figure}[H]
 			\centering
 			\includegraphics[width=0.8\linewidth]{annexes/e1-p5.png}
 			\caption{Diagrama de torta E-1 P-5}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} Propia.
+		\end{center}
 		}
 		
 		\subsubsection*{Encuesta 2 - Satisfacción del proyecto}
@@ -127,18 +142,27 @@
 				\includegraphics[width=0.8\linewidth]{annexes/e2-p1.png}
 				\caption{Diagrama de torta E-2 P-1}
 			\end{figure}
+			\begin{center}
+				\textbf{Fuente:} Propia.
+			\end{center}
 			
 			\begin{figure}[H]
 				\centering
 				\includegraphics[width=0.8\linewidth]{annexes/e2-p2.png}
 				\caption{Diagrama de torta E-2 P-2}
 			\end{figure}
+			\begin{center}
+				\textbf{Fuente:} Propia.
+			\end{center}
 			
 			\begin{figure}[H]
 				\centering
 				\includegraphics[width=0.8\linewidth]{annexes/e2-p3.png}
 				\caption{Diagrama de torta E-2 P-3}
 			\end{figure}
+			\begin{center}
+				\textbf{Fuente:} Propia.
+			\end{center}
 		}
 		
 	}
