--- a/description/framework.tex
+++ b/description/framework.tex
@@ -13,7 +13,10 @@
 			\includegraphics[width=0.8\linewidth]{description/framework/yotepresto.png}
 			\caption{Web yotepresto.com}
 		\end{figure}
-		
+	
+		\begin{center}
+			\textbf{Fuente:} \url{https://www.yotepresto.com/}
+		\end{center}
 		}
 	
 	
@@ -30,6 +33,10 @@
 			\includegraphics[width=0.8\linewidth]{description/framework/tendero.jpg}
 			\caption{Tendero fiando}
 		\end{figure}
+	
+		\begin{center}
+			\textbf{Fuente:} \url{https://www.elheraldo.co/economia/el-fiao-el-que-salva-las-tiendas-653295}
+		\end{center}
 		}
 	
 	
@@ -50,6 +57,9 @@
 			\includegraphics[width=0.8\linewidth]{description/framework/interactividad.jpg}
 			\caption{Interactividad}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} \url{https://kubik.mx/blog/category/mobile/}
+		\end{center}
 		}
 	
 		\subsubsection{Almacenamiento y persistencia de la información}
@@ -63,6 +73,9 @@
 			\includegraphics[width=0.8\linewidth]{description/framework/nube.jpg}
 			\caption{Almacenamiento en la nube}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} \url{https://smarterworkspaces.kyocera.es/blog/5-maneras-optimizar-la-rentabilidad-almacenamiento-la-nube/}
+		\end{center}
 	}
 		
 	
@@ -79,6 +92,9 @@
 			\includegraphics[width=0.8\linewidth]{description/framework/website.png}
 			\caption{Sitio Web}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} \url{https://informaticaydesarrollo.com/tag/diseno-de-paginas-web/}
+		\end{center}
 		}
 		
 		
@@ -93,6 +109,9 @@
 			\includegraphics[width=0.8\linewidth]{description/framework/responsive.jpg}
 			\caption{Diseño responsive}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} \url{https://posicionamientoweb-seo.net/tips-para-lograr-un-diseno-web-responsive/}
+		\end{center}
 		}
 			
 		
@@ -105,6 +124,9 @@
 			\includegraphics[width=0.8\linewidth]{description/framework/database.jpg}
 			\caption{Bases de datos}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} \url{https://www.aprendum.com.co/curso-virtual-administracion-gestion-bases-de-datos-sql/}
+		\end{center}
 		}
 	
 		\subsubsection{SQL}
@@ -120,6 +142,9 @@
 			\includegraphics[width=0.6\linewidth]{description/framework/sql.png}
 			\caption{sintaxis SQL}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} \url{https://data36.com/sql-for-aspiring-data-scientists-7-day-online-course/}
+		\end{center}
 		}
 	
 	
@@ -134,6 +159,9 @@
 			\includegraphics[width=0.6\linewidth]{description/framework/restful.png}
 			\caption{Rest Api}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} \url{http://www.gestclub.online/}
+		\end{center}
 		}
 	
 	
@@ -158,6 +186,9 @@
 			\includegraphics[width=0.8\linewidth]{description/framework/webapi.png}
 			\caption{WEB API}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} \url{https://techclub.tajamar.es/como-crear-una-web-api-y-acceder-a-datos-en-azure-usando-arquitectura-ado-net/}
+		\end{center}
 		}
 		
 		
@@ -170,5 +201,8 @@
 			\includegraphics[width=0.7\linewidth]{description/framework/http.jpg}
 			\caption{HTTP}
 		\end{figure}
+		\begin{center}
+			\textbf{Fuente:} \url{https://seminariotcnico.wordpress.com/internet/}
+		\end{center}
 		}
 			
