--- a/development/cases.tex
+++ b/development/cases.tex
@@ -7,4 +7,7 @@
 	\includegraphics[width=1\linewidth]{development/casos.png}
 	\caption{Caso de uso}
 \end{figure}}
+\begin{center}
+	\textbf{Fuente:} Propia.
+\end{center}
 
