--- a/development/wireframe.tex
+++ b/development/wireframe.tex
@@ -7,4 +7,7 @@
 	\includegraphics[width=1\linewidth]{development/wireframe.png}
 	\caption{Wireframe}
 \end{figure}
+\begin{center}
+	\textbf{Fuente:} Propia.
+\end{center}
 }
